[project]
name = "odometer-parser-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1",
    "opencv-python-headless>=4.13.0.92",
    "paddleocr>=3.7.0",
    "paddlepaddle===3.2.1",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
